Kubernetes-praticas/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis-rafael
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: go-redis-kubernetes:1.0.0
        name: redis-rafael
        resources: {}
