Kubernetes-praticas/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc-rafael
  name: svc-rafael
spec:
  selector:
    app: redis
    type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: conteiner-rafael
